Fixed the spacing between the projects div

--- a/css/index.css
+++ b/css/index.css
@@ -80,13 +80,16 @@ h3{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    padding-top: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 #projects_page .project{
     background-color: black;
     height: 250px;
-    width: calc(33.3333% - 1rem);
-    margin: 0.5rem;
+    width: calc(33.3333% - 0.5rem);
+    margin-left: 0.5rem;
+    margin-bottom: 0.5rem;
     text-align: center;
 }
 
